# TFAIdrvnclbrtnpltfrm

backend/: Dockerfile  pyproject.toml
frontend/: package-lock.json  package.json
infra/app/: backend.bicep
